tests/typechecker/should_fail/external_functions_4.csp
external transpose, mtransclose, relational_image, relational_inverse_image

A = mtransclose({(0,false)}, {0,1})
